fix banner overlay on mobile

--- a/src/App.css
+++ b/src/App.css
@@ -597,7 +597,7 @@ span {
   top: 0;
   left: 0;
   width: 100%;
-  height: 100%;
+  height: 100vh;
   background-color: rgba(0, 0, 0, 0.4);
 }
 
@@ -1381,10 +1381,6 @@ h5 {
 
   .home-header-grid img {
     margin-top: 100px;
-  }
-
-  .banner-overlay {
-    padding-bottom: 110px;
   }
 
   .appt-thumbnail img {
